DSND-2810: Fix double write race condition with Mongo versioning (#72)
* DSND-2810: Replace service unavailable exception with bad gateway

* A 502 bad gateway response better represents the exceptions thrown
  because they are a result of downstream failures, not that the data-api
  itself is unavailable.

* DSND-2810: Use insert or save to prevent race condition

* Calls insert if no document found so a duplicate key error will
  occur if two writes happen in quick succession.

* DSND-2810: Implement spring data mongo versioning

* DSND-2810: Fixed AnnotationTransactionIT tests with version clashes

- Fixed document version update to use `docToUpdate.version` for the compensatory transaction
- Fixed initial version numbers in test documents

* DSND-2810: Updated MongoTemplate config to allow optimistic locking

- Updated Mongo config
- Fixed test data and integration tests

* DSND-2810: Fix sonar issues

---------

Co-authored-by: johncookch <jcook@companieshouse.gov.uk>